# JobGPT

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
notebooks/: classify_resume.ipynb  read_resume.ipynb
scripts/: pdf_splitter.py
src/jobgpt/: __init__.py
src/jobgpt/restapi/: app.py
src/jobgpt/restapi/templates/: index.html  result.html  segmented_resume.html
src/jobgpt/resume_analyzer/: resume_analyzer.py  resume_reader.py  resume_segmenter.py
src/jobgpt/resume_processor/: base.py  resume_full_analyzer.py  resume_reader.py  resume_section_analyzer.py  resume_segmenter.py
src/jobgpt/utils/: dataclasses.py  llm.py  text_processor.py
