[tool.poetry]
name = "jobgpt"
version = "0.1.0"
description = "using AI to help students with their job seaching"
authors = ["Kofi Wang <kofiwang2614@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.7"
langchain = "^0.0.189"
pymupdf = "^1.22.3"
pypdf2 = "^3.0.1"
textract = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
