[tool.poetry]
name = "jobgpt"
version = "0.1.0"
description = "using AI to help students with their job seaching"
authors = ["Kofi Wang <kofiwang2614@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
openai = "^0.27.7"
langchain = "^0.0.189"
pymupdf = "^1.22.3"
pypdf2 = "^3.0.1"
pydantic = "^1.10.8"


[tool.poetry.group.dev.dependencies]
commitizen = "^3.2.2"
ipykernel = "^6.23.1"
python-dotenv = "^1.0.0"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_type = "pep440"
version_provider = "poetry"
update_changelog_on_bump = true
major_version_zero = true
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
